--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <h2>NEWS</h2>
         <p>どなたでも参加可能！オープンゼミ 〜Gitを使ってみよう〜</p>
         <p>5月6日開催</p>
+        <p>内容を更に修正しました</p>
       </div>
     </div>
     <div class="row">
